--- a/07.flexbox/project/index.html
+++ b/07.flexbox/project/index.html
@@ -15,6 +15,18 @@
   </head>
 
   <body>
-    hello
+    <div class="container">
+      <header class="header">
+        Header part
+      </header>
+      <div class="content">
+        <nav class="sidebar">
+          Navigation
+        </nav>
+        <main class="hotel-view">
+          Hotel view
+        </main>
+      </div>
+    </div>
   </body>
 </html>
